@@ -103,6 +103,10 @@ FBINTF Change Log  version          (1.4-0 Build 13139) Wed, 09 Feb 2022 16:12:0
     already the case with the legacy API. Avoids problems when calling underlying
     Firebird API in multiple threads.
 
+19. IBUtils: TSQLXMLReader: "string" type changed to "AnsiString" for compatibility
+    reasons.
+
+20. IDBInformation.DecodeVersionString now supported isc_info_firebird_version.
 
 
 FBINTF Change Log  version          (1.3-3 Build 12935) Mon, 06 Dec 2021 23:17:13 +0000
